# y60vlc

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  README  cmake_install.cmake  test.sh
include/acmake/: build_configuration.h  module_name.h
lib/: liby60vlc.dylib
pulse/: pulse_recipes.xml
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  VLC.cpp  VLC.h  cmake_install.cmake
src/ACMakeFiles/: y60vlc_buildinfo.cpp
src/js/: VlcCapture.js
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  VlcCapture.js  cmake_install.cmake  cube.x60  testCube.tst.js  testMovie.js  testMovieChangeChannels.tst.js  testMovieLooping.tst.js  testMoviePauseResume.tst.js  testMovieStartStop.tst.js  testMovie_change_channels.js  testMovie_looping.js  testMovie_pause_resume.js  testMovie_start_stop.js
tests/LAYOUT/: VideoStreamTest.spark  VideoTest.spark
